--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "unplugin-auto-import": "^0.18.2",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-svg-icons": "^2.0.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
